--- a/Main/css/bootstrap.css
+++ b/Main/css/bootstrap.css
@@ -4632,7 +4632,9 @@ a.thumbnail:focus {
   display: none;
 }
 .popover-content {
-  padding: 9px 14px;
+  padding: 9px 14px
+  max-width: 800px;
+  width: auto;
 }
 .popover .arrow,
 .popover .arrow:after {
