--- a/Main/css/bootstrap.css
+++ b/Main/css/bootstrap.css
@@ -4605,7 +4605,8 @@ a.thumbnail:focus {
   white-space: normal;
 }
 .popover.top {
-  margin-top: -20px;
+  margin-top: -10px;
+  margin-left: -10px;
 }
 .popover.right {
   margin-left: 10px;
@@ -4633,7 +4634,7 @@ a.thumbnail:focus {
 }
 .popover-content {
   padding: 9px 14px
-  max-width: 800px;
+  max-width: 1000px;
   
 }
 .popover .arrow,
