--- a/Main/css/bootstrap.css
+++ b/Main/css/bootstrap.css
@@ -4606,7 +4606,7 @@ a.thumbnail:focus {
 }
 .popover.top {
   margin-top: -10px;
-  margin-left: -20px;
+  margin-left: -25px;
 }
 .popover.right {
   margin-left: 10px;
@@ -4633,8 +4633,8 @@ a.thumbnail:focus {
   display: none;
 }
 .popover-content {
-  padding: 9px 14px
-  max-width: 1000px;
+  padding: 9px 14px;
+  
   
 }
 .popover .arrow,
